--- a/SampleTest/sonar-project.properties
+++ b/SampleTest/sonar-project.properties
@@ -1,8 +1,8 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=sampleTest
+sonar.projectKey=SampleTest
 # this is the name displayed in the SonarQube UI
-sonar.projectName=sampleTest
-sonar.projectVersion=1.0
+sonar.projectName=SampleTest
+sonar.projectVersion=2.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # Since SonarQube 4.2, this property is optional if sonar.modules is set.
@@ -12,3 +12,5 @@ sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+sonar.language=java
+sonar.java.binaries=target/SampleTest/WEB-INF/classes/
