--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
          <artifactId>maven-war-plugin</artifactId>
          <configuration>
               <webXml>SampleTest\src\main\webapp\WEB-INF\web.xml</webXml>   
-           # <outputDirectory>/tmp</outputDirectory>
+           <outputDirectory>/tmp</outputDirectory>
              </configuration>
             </plugin>
 
